Bug 1534289 - Fix download panel summary color in dark mode. r=ntim
Differential Revision: https://phabricator.services.mozilla.com/D30644

UltraBlame original commit: 3fd55231ce6209c899c30443afbbe04984ad335e

--- a/browser/themes/shared/downloads/downloads.inc.css
+++ b/browser/themes/shared/downloads/downloads.inc.css
@@ -371,6 +371,24 @@ moz
 nativehyperlinktext
 ;
 }
+:
+root
+[
+lwt
+-
+popup
+-
+brighttext
+]
+#
+downloadsSummaryDescription
+{
+color
+:
+#
+75baff
+;
+}
 #
 downloadsSummary
 item
